<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding"
        android:src="@drawable/fpl_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding"
        android:hint="@string/username"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding"
        android:hint="@string/password"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/chk_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ghi nhớ tôi"
        android:textSize="15sp"
        android:layout_margin="@dimen/margin_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_padding"
            android:text="@string/login"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_padding"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>